--- a/old/style.css
+++ b/old/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Press Start 2P";
   margin: 0;
   line-height: 1.6;
   background: #f9f9f9;
